src/App.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap');


:root {
    --alert: #b74444;
    --black: #000;
    --blue: #00A7D8;
    --dark_blue: #286ba2;
    --marine_blue: #2a6bcc;
    --dark_mode_blue: #0C1E3A;
    --dark_mode_purple: #360D4B;
    --dark_grey: #333333;
    --dim_grey: #696969;
    --light_grey: #d3d3d3;
    --light_alert: #df7474;
    --navbar: rgba(0,0,0, 0.5);
    --navbar_dark: rgba(0,0,0, 0.8);
    --orange: #FA9138;
    --red: #c4231d;
    --sand: #f9d89c;
    --slider: #2f2f2f;
    --white: #f4f4f4;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    scroll-behavior: smooth;
}

body {
    background-color: var(--white);
    color: var(--dark_grey);
    font-family: 'Nunito', sans-serif;
    line-height: 1.6;
    overflow-y: scroll;
}

a {
    color: var(--blue);
}

.header a,
.Main a,
.BackToSearch a,
.ScrollToTop a {
    text-decoration: none;
}

.BackToSearch a,
.ScrollToTop a {
    color: var(--dark_grey);
    font-family: 'Dosis', sans-serif;
    text-transform: uppercase;
}

.About a:visited,
.Footer a:visited {
    color: var(--alert);
}

.BackToSearch a:visited,
.ScrollToTop a:visited {
    color: var(--dark_grey);
}

.About a:visited:hover,
.Footer a:visited:hover {
    color: var(--light_alert);
}

a:hover {
    color: var(--marine_blue);
}

.BackToSearch a:hover,
.BackToSearch a:visited:hover,
.ScrollToTop a:hover,
.ScrollToTop a:visited:hover {
    color: var(--marine_blue);
    opacity: 0.8;
}

a:active {
    color: var(--black);
}

img {
    width: 100%;
}



/*
+ Navbar
*/

.header {
    background: url(img/beach.jpg) no-repeat;
    background-size: 100vw 100vh;
}

.header_100 {
    height: 100vh;
}

.header_70 {
    height: 70vh;
}

.header_no_image {
    height: 10vh;
}

.header_dark_mode {
    filter: brightness(65%);
}

.header_404 {
    background: url(img/404.jpg) no-repeat top;
    height: 100vh;
}

.navbar {
    align-items: center;
    background-color: var(--navbar);
    box-shadow: inset 0 0 5rem rgb(10, 22, 29);
    display: flex;
    font-size: 1.2rem;
    height: 10vh;
    justify-content: center;
    padding: 0.7rem;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    width: 100%;
}

.navbar_dark {
    background-color: var(--navbar_dark);
}

.navbar_other {
    background-color: rgba(7, 13, 17, 0.9);
    box-shadow: none;
}

.navbar a {
    color: var(--white);
    margin: 0 0.25rem;
    padding: 0.45rem;
}

.navbar .active {
    color: var(--orange);
}

.logo_wrapper {
    align-items: center;
    display: flex;
}

.logo_img {
    margin-right: 3px;
    width: 35px;
}

.nav_link_item {
    padding: 0 10px;
    text-transform: uppercase;
}

.nav_link_item.about {
    margin-right: 35px;
}



/*
+ DarkMode
*/

.dark-mode {
    background: #0C1E3A;
    background: -webkit-linear-gradient(top left, #0C1E3A, #360D4B);
    background: -moz-linear-gradient(top left, #0C1E3A, #360D4B);
    background: linear-gradient(to bottom right, #0C1E3A, #360D4B);
    color: var(--light_grey);
}

.DarkMode {
    position: relative;
    width: 100%;
}

.darkMode-button-wrapper {
    position: absolute;
    right: 30px;
    top: 30px;
}

.darkMode-button-wrapper button {
    cursor: pointer;
}


/*
+ Modal
*/

.Modal {
    background-color: var(--navbar_dark);
    height: 100%;
    left: 0;
    margin-left: auto;
    margin-right: auto;
    overflow: auto;
    position: fixed;
    text-align: center;
    top: 10vh;
    width: 100%;
    z-index: 10;
}

.modal_content {
    background-color: var(--white);
    box-shadow: 1px 1px 86px 10px rgba(0, 167, 216, 0.5);
    border-radius: 8px;
    margin: 10vh auto auto;
    width: 35vw;
}

.modal_text {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 30px;
}

.modal_text h1 {
    display: inline;
    font-size: 2.4rem;
    margin: 2vh;
}

.modal_text .dots {
    position: absolute;
    margin-left: 3px;
}

.modal_text h2 {
    font-size: 1.8rem;
}

.modal_content span {
    text-transform: capitalize;
}



/*
+ Errors
+ Alert
*/

.alert {
    background: var(--white);
    border: 4px solid var(--alert);
    border-radius: 4px;
    font-size: 1.4rem;
    left: 0;
    margin-left: auto;
    margin-right: auto;
    padding: 20px;
    position: absolute;
    right: 0;
    text-align: center;
    top: 15vh;
    width: 35vw;
}

.warning_logo {
    width: 64px;
}

.alert h2 {
    color: var(--red);
}

p.close {
    margin-top: 3vh;
}



/*
+ Image Separator
*/

.ImageSeparator,
.ImageSeparatorDefault {
    height: 80vh;
}

.ImageSeparatorDefault {
    background: url(img/beach.jpg) fixed no-repeat center;
    background-size: cover;
}

/* Good weather - Day */
.ImageSeparator.Sunny {
    background: url(img/sunny.jpg) fixed no-repeat;
    background-size: cover;
    background-position: 0 20%;
}

/* Good weather - Night */
.ImageSeparator.Clear {
    background: url(img/clear.jpg) fixed no-repeat;
    background-size: cover;
    background-position: 0 60%;
}

.ImageSeparator.Cloudy {
    background: url(img/cloudy.jpg) fixed no-repeat;
    background-size: cover;
    background-position: 0 80%;
}

.ImageSeparator.FogAndMist {
    background: url(img/fogandmist.jpg) fixed no-repeat;
    background-size: cover;
}

.ImageSeparator.Rainy {
    background: url(img/rain.jpg) fixed no-repeat;
    background-size: cover;
}

.ImageSeparator.Rain-Shower {
    background: url(img/rain-shower.jpg) fixed no-repeat center;
    background-size: cover;
}

.ImageSeparator.Sleet {
    background: url(img/sleet.jpg) fixed no-repeat center;
    background-size: cover;
    background-position: 0 30%;
}
/* ... */

